# Helix

./: .dockerignore  .env.example  .gitignore  .impeccable.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
api/: __init__.py  exceptions.py  types.py
api/config/: __init__.py  loader.py  models.py
api/dataset/: __init__.py  invalidation.py  models.py  schemas.py  service.py
api/evaluation/: __init__.py  adaptive.py  aggregator.py  evaluator.py  models.py  regression.py  renderer.py  sampling.py  scorers.py  validator.py
api/evolution/: __init__.py  islands.py  loop.py  models.py  mutator.py  prompts.py  rcc.py  runner.py  selector.py
api/gateway/: __init__.py  cost.py  factory.py  litellm_provider.py  model_listing.py  models.py  protocol.py  registry.py
api/lineage/: __init__.py  collector.py  models.py  renderer.py
api/registry/: __init__.py  llm_mocker.py  mock_matcher.py  models.py  schemas.py  sections.py  service.py  tool_resolver.py  validation.py
api/storage/: __init__.py  database.py  encryption.py  git.py  models.py  queries.py
api/synthesis/: __init__.py  engine.py  models.py  personas.py
api/web/: app.py  deps.py  event_bus.py  events.py  run_manager.py  schemas.py
cli/: pyproject.toml
cli/helix_cli/: __init__.py  config_home.py
cli/helix_cli/commands/: models.py  setup.py
cli/helix_cli/project/: loader.py
docs/: CONFIGURATION.md  IMPORT_EXPORT.md  SECURITY_AUDIT.md  SETUP.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  components.json  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
tests/: conftest.py  test_otel.py  test_types_and_exceptions.py
tests/api/: conftest.py  test_app.py  test_datasets.py  test_event_bus.py  test_events.py  test_evolution.py  test_format_guides.py  test_history.py  test_history_results.py  test_import_export.py  test_models.py  test_personas.py  test_playground_chat.py  test_playground_config.py  test_playground_variables.py  test_presets.py  test_prompt_config_api.py  test_prompt_versions.py  (+6 more)
(+185 files in other folders)
