[project]
name = "helix-cli"
version = "0.1.0"
description = "CLI for Helix evolutionary prompt optimization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "helix-engine>=0.1.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
]

[project.scripts]
helix = "helix_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_cli"]

[tool.ruff]
line-length = 100
target-version = "py313"
